# lkcpp-localization

./: .gitignore  .gitmodules  README.md
launch/launch/: startRobot.launch  turtlebot_world.launch
localization/: CMakeLists.txt  package.xml
localization/amcl/inc/: amcl.h  landmarks.h  measurement_model.h  motion_model.h  particle.h
localization/amcl/src/: amcl.cpp  landmarks.cpp  measurement_model.cpp  motion_model.cpp  particle.cpp
localization/include/cluster/: cluster.h
localization/include/localization/: localization.h
localization/launch/: localization.launch
localization/msg/: feature.msg  featureArray.msg  featureArrayH.msg
localization/src/: cluster.cpp  feature_node.cpp  localization.cpp  localization_node.cpp  match_kinect_laser.cpp  testpub.cpp
navigation/: CMakeLists.txt  package.xml
navigation/costum_maps/: map-startup  playing-field-obstacle.yaml  playing-field.yaml
navigation/costum_maps/stage/: maze.world  playing-field-obstacle.world  playing-field.world
navigation/drive/inc/: drive.h
navigation/drive/src/: drive.cpp
navigation/launch/: stage.launch
navigation/move/inc/: cruisecontrol.h  move.h
navigation/move/src/: cruisecontrol.cpp  move.cpp
navigation/pid/inc/: PID.h
navigation/pid/src/: PID.cpp
navigation/search/inc/: astar.h
navigation/search/src/: astar.cpp
navigation/src/: navigation_node.cpp  pathplanner_srv.cpp  test_cruise_ctrl.cpp  test_pathplanner_node.cpp
navigation/srv/: Path.srv
navigation/vector2d/inc/: vector2d.h
navigation/vector2d/src/: vector2d.cpp
navigation/waypoints/inc/: purepursuit.h  rpd.h
navigation/waypoints/src/: purepursuit.cpp  rpd.cpp
statemachine/: CMakeLists.txt  package.xml
statemachine/hermes/src/: referee.cpp
statemachine/imageprocessing/inc/: ImageProcessingObjects.h  blob.h  blobArray.h  filter.h  image_processing.h  lidar_processing.h  util.h
statemachine/imageprocessing/inc/Helper/: Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  Vector2d.cpp  Vector2d.h
statemachine/imageprocessing/src/: blob.cpp  blobArray.cpp  filter.cpp  image_processing.cpp  lidar_processing.cpp  util.cpp
statemachine/include/: ObjectParser.h  roboControl.h
statemachine/include/Features/: feature.h  featureArray.h  featureArrayH.h
statemachine/include/StateMachines/: CalcABMachine.h  FindColorMachine.h  GlobalStateMachine.h  GlobalStateMachine.h.orig  ShootMachine.h  StateMachine.h  states.h
statemachine/launch/: 2statemachine.launch  lkt.rviz  stateSim.launch  statemachine.launch  statemachineMarc.launch
statemachine/src/: ObjectParser.cpp  restart.cpp  roboControl.cpp  statemachine_node.cpp
statemachine/src/StateMachines/: CalcABMachine.cpp  FindColorMachine.cpp  GlobalStateMachine.cpp  GlobalStateMachine.cpp.orig  ShootMachine.cpp
